# graphs

./: CMakeLists.txt  graphinfo.cpp  graphinfo.h  mainwindow.cpp  mainwindow.h
